[package]
name = "rust_rf2_proxy"
version = "0.0.1"
authors = ["Daniel Weiß <96er.daniel.weiss@gmail.com>"]
edition = "2018"

#[target.x86_64-unknown-linux-musl]
#linker = "rust-lld"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["executor"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19.2", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.9"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
warp = "0.3"
